components/test-non-local/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata: 
  labels: 
    app.kubernetes.io/instance: test-non-local
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: test-non-local 
  name: test-non-local
spec:
  port:
    targetPort: 8081 
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: test-non-local
    weight: 100
